SIP-4786: Fix overflow problem in dashboard name when auto refresh is on

--- a/saw-web/src/app/modules/observe/components/observe-view/observe-view.component.scss
+++ b/saw-web/src/app/modules/observe/components/observe-view/observe-view.component.scss
@@ -27,7 +27,17 @@ mat-sidenav-container .mat-drawer-backdrop.mat-drawer-shown {
   box-sizing: border-box;
 
   h2 {
+    overflow: hidden;
     flex-grow: 1;
+
+    & > span {
+      display: inline-block;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      vertical-align: top;
+      max-width: 80%;
+    }
 
     .dashboard-default-button {
       height: 30px;
@@ -50,6 +60,7 @@ mat-sidenav-container .mat-drawer-backdrop.mat-drawer-shown {
     display: flex;
     align-items: center;
     flex-grow: 1;
+    min-width: 532px;
     justify-content: flex-end;
 
     button {
